app/static/frontend/css/style.css
/* ... */
body h2,
body .h2 {
    position: relative;
    display: block;
    margin-top: 2rem;
    margin-bottom: 0.5rem;
    color: #eee;
    text-transform: none;
    letter-spacing: normal;
    font-weight: bold;
    font-size: 1rem;
}

body h3 {
    color: #eee;
    text-decoration: underline;
    font-weight: bold;
    font-size: 0.9rem;
}

body h4,
body h5,
body h6 {
    display: inline;
    text-decoration: none;
    color: #ccc;
    font-weight: bold;
    font-size: 0.9rem;
}

body h3,
body h4,
body h5,
body h6 {
    margin-top: 0.9rem;
    margin-bottom: 0.5rem;
}

body hr {
    border: 0.5px dashed #ccc;
    opacity: 0.5;
    margin: 0;
    margin-top: 20px;
    margin-bottom: 20px;
}

body strong {
    font-weight: bold;
}

body em,
body cite {
    font-style: italic;
}

body sup,
body sub {
    position: relative;
    vertical-align: baseline;
    font-size: 0.75em;
    line-height: 0;
}

body sup {
    top: -0.5em;
}

body sub {
    bottom: -0.2em;
}

body small {
    font-size: 0.85em;
}

body acronym,
body abbr {
    border-bottom: 1px dotted;
}

body ul,
body ol,
body dl {
    line-height: 1.725;
}

body ul ul,
body ol ul,
body ul ol,
body ol ol {
    margin-top: 0;
    margin-bottom: 0;
}

body ol {
    list-style: decimal;
}

body dt {
    font-weight: bold;
}

body table {
    width: 100%;
    border-collapse: collapse;
    text-align: left;
    font-size: 12px;
    overflow: auto;
    display: block;
}

body th {
    padding: 8px;
    border-bottom: 1px dashed #666;
    color: #eee;
    font-weight: bold;
    font-size: 13px;
}

body td {
    padding: 0 8px;
    border-bottom: none;
}

@font-face {
    font-style: normal;
    font-family: "Meslo LG";
    src: local("Meslo LG S"), url("../lib/meslo-LG/MesloLGS-Regular.ttf") format("truetype");
}

*,
*:before,
*:after {
    box-sizing: border-box;
}

html {
    margin: 0;
    padding: 0;
    height: 100%;
    border-top: 2px solid #c9cacc;
    -webkit-text-size-adjust: 100%;
    -ms-text-size-adjust: 100%;
}

body {
    margin: 0;
    height: 100%;
    background-color: #1d1f21;
    color: #c9cacc;
    font-display: swap;
    font-weight: 400;
    font-size: 14px;
    font-family: "Menlo", "Meslo LG", monospace;
    line-height: 1.725;
    text-rendering: geometricPrecision;
    flex: 1;
    -moz-osx-font-smoothing: grayscale;
    -webkit-font-smoothing: antialiased;
}

.content {
    position: relative;
    display: flex;
    flex-direction: column;
    min-height: 100%;
    overflow-wrap: break-word;
}

.content p {
    margin: 5px 0;
    hyphens: auto;
    -moz-hyphens: auto;
    -ms-hyphens: auto;
    -webkit-hyphens: auto;
}

.content code {
    hyphens: manual;
    -moz-hyphens: manual;
    -ms-hyphens: manual;
    -webkit-hyphens: manual;
}

.content a {
    color: #c9cacc;
    text-decoration: none;
    background-image: linear-gradient(transparent, transparent 5px, #c9cacc 5px, #c9cacc);
    background-position: bottom;
    background-size: 100% 6px;
    background-repeat: repeat-x;
}

.content a:hover {
    background-image: linear-gradient(transparent, transparent 4px, #d480aa 4px, #d480aa);
}

.content a.icon {
    background: none;
}

.content a.icon:hover {
    color: #d480aa;
}

.content h1 a,
.content .h1 a,
.content h2 a,
.content h3 a,
.content h4 a,
.content h5 a,
.content h6 a {
    background: none;
    color: inherit;
    text-decoration: none;
}

.content h1 a:hover,
.content .h1 a:hover,
.content h2 a:hover,
.content h3 a:hover,
.content h4 a:hover,
.content h5 a:hover,
.content h6 a:hover {
    background-image: linear-gradient(transparent, transparent 6px, #d480aa 6px, #d480aa);
    background-position: bottom;
    background-size: 100% 6px;
    background-repeat: repeat-x;
}

.content h6 a {
    background: none;
    color: inherit;
    text-decoration: none;
}

.content h6 a:hover {
    background-image: linear-gradient(transparent, transparent 6px, #d480aa 6px, #d480aa);
    background-position: bottom;
    background-size: 100% 6px;
    background-repeat: repeat-x;
}

@media (min-width: 540px) {
    .image-wrap {
        flex-direction: row;
        margin-bottom: 2rem;
    }

    .image-wrap .image-block {
        flex: 1 0 35%;
        margin-right: 2rem;
    }

    .image-wrap p {
        flex: 1 0 65%;
    }
}

.max-width {
    max-width: 48rem;
}

@media (max-width: 480px) {
    .px3 {
        padding-right: 1rem;
        padding-left: 1rem;
    }

    .my4 {
        margin-top: 2rem;
        margin-bottom: 2rem;
    }
}

@media (min-width: 480px) {
    p {
        text-align: justify;
    }
}

#header {
    margin: 0 auto 2rem;
    width: 100%;
}

#header h1,
#header .h1 {
    margin-top: 0;
    margin-bottom: 0;
    color: #c9cacc;
    letter-spacing: 0.01em;
    font-weight: 700;
    font-style: normal;
    font-size: 1.5rem;
    line-height: 2rem;
    -moz-osx-font-smoothing: grayscale;
    -webkit-font-smoothing: antialiased;
}

#header a {
    background: none;
    color: inherit;
    text-decoration: none;
}

#header #logo {
    display: inline-block;
    float: left;
    margin-right: 20px;
    width: 50px;
    height: 50px;
    border-radius: 5px;
    filter: grayscale(100%);
    background-size: 50px 50px;
    background-repeat: no-repeat;
    -webkit-filter: grayscale(100%);
}

#header #nav {
    color: #2bbc8a;
    letter-spacing: 0.01em;
    font-weight: 200;
    font-style: normal;
    font-size: 0.8rem;
}

#header #nav ul {
    margin: 0;
    padding: 0;
    list-style-type: none;
    line-height: 15px;
}

#header #nav ul a {
    margin-right: 15px;
    color: #2bbc8a;
}

#header #nav ul a:hover {
    background-image: linear-gradient(transparent, transparent 5px, #2bbc8a 5px, #2bbc8a);
    background-position: bottom;
    background-size: 100% 6px;
    background-repeat: repeat-x;
}

#header #nav ul li {
    display: inline-block;
    margin-right: 15px;
    border-right: 1px dotted;
    border-color: #2bbc8a;
    vertical-align: middle;
}
/* ... */

